--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 uvicorn = "^0.27.1"
 fastapi = "^0.109.2"
 pydantic-settings = "^2.2.1"
+aiohttp = "^3.9.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.2.2"
